add launch file lidar sitl, off board mode using mavros

--- a/src/uavlab411/CMakeLists.txt
+++ b/src/uavlab411/CMakeLists.txt
@@ -9,6 +9,7 @@ project(uavlab411)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  geometry_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -134,6 +135,7 @@ include_directories(
 # add_executable(${PROJECT_NAME}_node src/uavlab411_node.cpp)
 add_executable(UdpServer src/UdpServer.cpp)
 add_executable(UdpClient src/UdpClient.cpp)
+add_executable(off_board src/off_board.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -149,6 +151,9 @@ target_link_libraries(UdpClient
   ${catkin_LIBRARIES}
 )
 target_link_libraries(UdpServer
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(off_board
   ${catkin_LIBRARIES}
 )
 
