--- a/src/my_move_base/config/costmap_common_params.yaml
+++ b/src/my_move_base/config/costmap_common_params.yaml
@@ -1,12 +1,12 @@
 obstacle_range: 2.5
 raytrace_range: 3.0
 
-footprint: [[0.1,0.1], [0.1,-0.1],[-0.1,-0.1],[-0.1,0.1]]
-#robot_radius: ir_of_robot
-inflation_radius: 0.1
+# footprint: [[0.1,0.1], [0.1,-0.1],[-0.1,-0.1],[-0.1,0.1]]
+robot_radius: 0.2 # Bán kính từ tâm robot đên rìa ngoài robot
+inflation_radius: 0.2
 
-# observation_sources: laser_scan_sensor, point_cloud_sensor
+observation_sources: laser_scan_sensor #, point_cloud_sensor
 
-# laser_scan_sensor: {sensor_frame: base_frame, data_type: LaserScan, topic: LaserScan, marking: true, clearing: true}
+laser_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: /laser/scan, marking: true, clearing: true}
 
 # point_cloud_sensor: {sensor_frame: frame_name, data_type: PointCloud, topic: topic_name, marking: true, clearing: true}
