fix navigate, add telemetry srv, modify example

--- a/src/uavlab411/CMakeLists.txt
+++ b/src/uavlab411/CMakeLists.txt
@@ -59,6 +59,7 @@ add_service_files(
   Navigate.srv
   PidTuning.srv
   Takeoff.srv
+  Telemetry.srv
 )
 
 ## Generate actions in the 'action' folder
