handle loss uavpose and create service navigate to global waypoints

--- a/src/uavlab411/package.xml
+++ b/src/uavlab411/package.xml
@@ -50,6 +50,8 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>clover</build_depend>
+  <exec_depend>clover</exec_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <build_depend>message_generation</build_depend>
