--- a/src/uavlab411/CMakeLists.txt
+++ b/src/uavlab411/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf
   geometry_msgs
   message_generation
+  clover
 )
 
 ## System dependencies are found with CMake's conventions
