nav with gps point

--- a/src/uavlab411/CMakeLists.txt
+++ b/src/uavlab411/CMakeLists.txt
@@ -58,6 +58,7 @@ add_message_files(
 add_service_files(
   FILES
   Navigate.srv
+  NavigateGlobal.srv
   PidTuning.srv
   Takeoff.srv
   Telemetry.srv
